# noob

./: .gitignore  pyproject.toml  run.sh  telethon_draft.py
lapa/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
lapa/migrations/: 0001_initial.py  0002_remove_post_pm_post_am_pm_alter_post_day_of_month.py  0003_post_need_to_change_month.py  0004_rename_need_to_change_month_post_next_month.py  0005_alter_profile_selenium_alter_profile_webdriver.py  0006_alter_profile_selenium_alter_profile_webdriver.py  0007_post_is_12_plus.py  0008_profile_need_clear_posts_folder.py  0009_profile_active.py  0010_postmodel.py  0011_post_username.py  0012_postmodel_subscribers.py  0013_postmodel_first_post_date.py
src/: settings.py  urls.py
static/css/: style.css
templates/admin/: base.html
templates/admin/lapa/: post_change_list.html
